--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="tr">
+<html lang="en" itemscope="" itemtype="http://schema.org/Webpage">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
+    <title>Efehan Koçak</title>
+    <meta name="description" content="Ben Efehan Koçak, yazılım sektöründe kendimi geliştiren bir genç olarak yenilikçi projelerde yer almayı ve öğrenmeyi hedefliyorum. Teknolojiye olan tutkumla kariyerime yön vermek için heyecanla çalışıyorum." />
+
+    <meta itemprop="name" content="Efehan Koçak">
+    <meta itemprop="description" content="Ben Efehan Koçak, yazılım sektöründe kendimi geliştiren bir genç olarak yenilikçi projelerde yer almayı ve öğrenmeyi hedefliyorum. Teknolojiye olan tutkumla kariyerime yön vermek için heyecanla çalışıyorum.">
+    <meta itemprop="image" content="https://wanderloq.github.io/profil.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@wanderloq">
+    <meta name="twitter:url" content="https://wanderloq.github.io/">
+    <meta name="twitter:title" content="Efehan Koçak">
+    <meta name="twitter:description" content="Ben Efehan Koçak, yazılım sektöründe kendimi geliştiren bir genç olarak yenilikçi projelerde yer almayı ve öğrenmeyi hedefliyorum. Teknolojiye olan tutkumla kariyerime yön vermek için heyecanla çalışıyorum.">
+    <meta name="twitter:site" content="@wanderloq">
+    <meta name="twitter:image" content="https://wanderloq.github.io/profil.png">
+    <meta name="twitter:image:alt" content="Ben Efehan Koçak, yazılım sektöründe kendimi geliştiren bir genç olarak yenilikçi projelerde yer almayı ve öğrenmeyi hedefliyorum. Teknolojiye olan tutkumla kariyerime yön vermek için heyecanla çalışıyorum.">
+    <meta property="og:url" content="https://wanderloq.github.io//" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Efehan Koçak" />
+    <meta property="og:description" content="Ben Efehan Koçak, yazılım sektöründe kendimi geliştiren bir genç olarak yenilikçi projelerde yer almayı ve öğrenmeyi hedefliyorum. Teknolojiye olan tutkumla kariyerime yön vermek için heyecanla çalışıyorum." />
+    <meta property="og:image" content="https://wanderloq.github.io/profil.png" />
+    <meta property="og:locale" content="tr_TR" />
+    <meta property="og:site_name" content="Efehan Koçak" />
+
 </head>
 
 <body>
