--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
-<html lang="en" itemscope="" itemtype="http://schema.org/Webpage">
+<html lang="tr" itemscope="" itemtype="http://schema.org/Webpage">
 
 <head>
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimal-ui">
